add intro(information block) + fix nav

--- a/index.html
+++ b/index.html
@@ -25,5 +25,29 @@
         </nav>
       </div>
     </header>
+    <div class="intro">
+      <div class="info">
+        <div class="info__top">
+          <h1 class="info__title1">Ana <span class="info__span">&</span>David</h1>
+          <h2 class="info__subtitle">We are getting married</h2>
+          <div class="line"></div>
+          <p class="info__address1">Carina Park</p>
+
+          <p class="info__address2">Piko Bima Center, 49 BG RoadAlabama, CA</p>
+        </div>
+        <div class="info__bottom">
+          <h2 class="info__title2">Big moments Left  ~</h2>
+          <div class="date">
+            <div class="date__element"><span class="date__span">12</span> Days</div>
+            <div class="date__element"><span class="date__span">05</span> Hours</div>
+            <div class="date__element"><span class="date__span">30</span> Minute </div>
+            <div class="date__element"><span class="date__span">05</span> Second</div>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
+      <div class="arrow"></div>
+      <div class="social"></div>
+    </div>
   </body>
 </html>
