--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
         <div class="clearfix"></div>
       </div>
       <div class="social">
-        <i class="social__icon fab fa-facebook-f"></i>
-        <i class="social__icon fab fa-twitter"></i>
-        <i class="social__icon fab fa-instagram"></i>
-        <i class="social__icon fab fa-youtube"></i>
+        <a href="#"><i class="social__icon fab fa-facebook-f"></i></a>
+        <a href="#"><i class="social__icon fab fa-twitter"></i></a>
+        <a href="#"><i class="social__icon fab fa-instagram"></i></a>
+        <a href#><i class="social__icon fab fa-youtube"></i></a>
       </div>
     </div>
     <div class="about">
       <img src="images/deco1.png" alt=" " />
       <div class="container">
-        <div class="about__title">
+        <div class="about__title title">
           <h2>Who We are?</h2>
           <p>
             dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
@@ -85,23 +85,62 @@
           </p>
         </div>
         <div class="about__gallery">
-          <div class="about__inf groom1">
-            <div class="groom1__inner">
+          <div class="about__inf bio">
+            <div class="bio__inner">
               <h3>Robin David</h3>
-              <div class="groom1__line"></div>
+              <div class="bio__line"></div>
               <div class="clearfix"></div>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing uip ex ea
                 commodo consequat. Duis aute irure dolornderit in voluptate
                 velit esse cillum dolore eu
               </p>
+              <a href="#"><i class="icon fab fa-facebook-f"></i></a>
+              <a href="#"><i class="icon fab fa-twitter"></i></a>
+              <a href="#"><i class="icon fab fa-instagram"></i></a>
+              <a href="#"><i class="icon fab fa-youtube"></i></a>
             </div>
           </div>
-          <div class="about__inf groom2"></div>
-          <div class="about__inf bride2"></div>
-          <div class="about__inf bride1"></div>
+          <div class="about__inf groom"></div>
+          <div class="about__inf bride"></div>
+          <div class="about__inf bio">
+            <div class="bio__inner">
+              <h3>Ana Marwana</h3>
+              <div class="bio__line"></div>
+              <div class="clearfix"></div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing uip ex ea
+                commodo consequat. Duis aute irure dolornderit in voluptate
+                velit esse cillum dolore eu
+              </p>
+              <a href="#"><i class="icon fab fa-facebook-f"></i></a>
+              <a href="#"><i class="icon fab fa-twitter"></i></a>
+              <a href="#"><i class="icon fab fa-instagram"></i></a>
+              <a href="#"><i class="icon fab fa-youtube"></i></a>
+            </div>
+          </div>
           <div class="clearfix"></div>
         </div>
+      </div>
+    </div>
+    <div class="gallary">
+      <div class="container">
+        <div class="title">
+          <h2>Our Happy Moments</h2>
+          <p>
+            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+          </p>
+        </div>
+        <div class="gallary__photo">
+          <div class="photo photo1"></div>
+          <div class="photo photo2"></div>
+          <div class="photo photo3"></div>
+          <div class="photo photo4"></div>
+          <div class="photo photo5"></div>
+          <div class="photo photo6"></div>
+        </div>
+        <div class="clearfix"></div>
       </div>
     </div>
   </body>
