--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a href="#"><i class="social__icon fab fa-facebook-f"></i></a>
         <a href="#"><i class="social__icon fab fa-twitter"></i></a>
         <a href="#"><i class="social__icon fab fa-instagram"></i></a>
-        <a href#><i class="social__icon fab fa-youtube"></i></a>
+        <a href="#"><i class="social__icon fab fa-youtube"></i></a>
       </div>
     </div>
     <div class="about">
@@ -141,6 +141,91 @@
           <div class="photo photo6"></div>
         </div>
         <div class="clearfix"></div>
+      </div>
+    </div>
+    <div class="story">
+      <img class="deco2" src="images/deco2.png" alt=" " />
+      <img class="deco3" src="images/deco3.png" alt=" " />
+      <div class="container">
+        <div class="title">
+          <h2>Our Story</h2>
+          <p>
+            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="story-container">
+          <div class="story-container__decor">
+            <div class="story-container__img"></div>
+          </div>
+          <div class="story-container__description">
+            <div class="story-date">January 12, 2010</div>
+            <div class="story-container__line"></div>
+            <div class="clearfix"></div>
+            <h3>The day we First met</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat nulla..
+            </p>
+            <div class="read-more">Read More...</div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="story-container2">
+          <div class="story-container__decor">
+            <div class="story-container__img"></div>
+          </div>
+          <div class="story-container__description">
+            <div class="story-date">June 05, 2011</div>
+            <div class="story-container__line"></div>
+            <div class="clearfix"></div>
+            <h3>The day we First Date</h3>
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+              cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            </p>
+            <div class="read-more">Read More...</div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="story-container3">
+          <div class="story-container__decor">
+            <div class="story-container__img"></div>
+          </div>
+          <div class="story-container__description">
+            <div class="story-date">August 12, 2011</div>
+            <div class="story-container__line"></div>
+            <div class="clearfix"></div>
+            <h3>The day we Propose</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat nulla...
+            </p>
+            <div class="read-more">Read More...</div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="story-container2" id="copy4">
+          <div class="story-container__decor">
+            <div class="story-container__img"></div>
+          </div>
+          <div class="story-container__description">
+            <div class="story-date">March 05, 2012</div>
+            <div class="story-container__line"></div>
+            <div class="clearfix"></div>
+            <h3>The big day we are getting Married</h3>
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+              cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            </p>
+            <div class="read-more">Read More...</div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
       </div>
     </div>
   </body>
