--- a/index.html
+++ b/index.html
@@ -228,5 +228,140 @@
         </div>
       </div>
     </div>
+    <div class="people">
+      <div class="container">
+        <div class="title">
+          <h2>Our People</h2>
+          <p>
+            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="people__relatives">
+          <div class="relatives1">The Groomsmen</div>
+          <div class="relatives2">The Bridesmaid</div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="cards-container">
+          <div class="people__card card1">
+            <div class="people__description">
+              <div class="people-name">David Hamilton</div>
+
+              <div class="center">
+                <div class="card-line"></div>
+                <div class="role">Best Friend</div>
+                <div class="card-line"></div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="people__card card2">
+            <div class="people__description">
+              <div class="people-name">Daniela White</div>
+
+              <div class="center">
+                <div class="card-line"></div>
+                <div class="role">Mother</div>
+                <div class="card-line"></div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="people__card card3">
+            <div class="people__description">
+              <div class="people-name">Justin Edwards</div>
+
+              <div class="center">
+                <div class="card-line"></div>
+                <div class="role">Brother</div>
+                <div class="card-line"></div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="people__card card4">
+            <div class="people__description">
+              <div class="people-name">Joseph Edwards</div>
+
+              <div class="center">
+                <div class="card-line"></div>
+                <div class="role">Brother</div>
+                <div class="card-line"></div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="people__card card5">
+            <div class="people__description">
+              <div class="people-name">Marlene Townsend</div>
+
+              <div class="center">
+                <div class="card-line"></div>
+                <div class="role">Cousin</div>
+                <div class="card-line"></div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="people__card card6">
+            <div class="people__description">
+              <div class="people-name">Matthew White</div>
+
+              <div class="center">
+                <div class="card-line"></div>
+                <div class="role">Brother</div>
+                <div class="card-line"></div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="people__card card7">
+            <div class="people__description">
+              <div class="people-name">Kenneth Edwards</div>
+
+              <div class="center">
+                <div class="card-line"></div>
+                <div class="role">Father</div>
+                <div class="card-line"></div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="people__card card8">
+            <div class="people__description">
+              <div class="people-name">Marianna Edwards</div>
+
+              <div class="center">
+                <div class="card-line"></div>
+                <div class="role">Sister</div>
+                <div class="card-line"></div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+    <div class="ceremony">
+      <div class="container">
+        <div class="title">
+          <h2>Our Marriage Ceremony</h2>
+          <p>
+            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="ceremony__card ceremony__card--1"></div>
+        <div class="ceremony__card ceremony__card--2"></div>
+        <div class="ceremony__card ceremony__card--3"></div>
+        <div class="ceremony__card ceremony__card--4"></div>
+        <div class="ceremony__card ceremony__card--5"></div>
+        <div class="ceremony__card ceremony__card--6"></div>
+        <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
