add ceremony block

--- a/index.html
+++ b/index.html
@@ -353,12 +353,53 @@
             incididunt ut labore et dolore magna aliqua.
           </p>
         </div>
-        <div class="ceremony__card ceremony__card--1"></div>
-        <div class="ceremony__card ceremony__card--2"></div>
-        <div class="ceremony__card ceremony__card--3"></div>
-        <div class="ceremony__card ceremony__card--4"></div>
-        <div class="ceremony__card ceremony__card--5"></div>
-        <div class="ceremony__card ceremony__card--6"></div>
+        <div class="ceremony__card">
+          <h3>Friends Meetup</h3>
+          <div class="ceremony__inf">
+            <div class="time">Time:  9:00 AM</div>
+            <div class="area">Area:  Bislol Area Zone,</div>
+            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+          </div>
+        </div>
+        <div class="ceremony__card">
+          <h3>Reception</h3>
+          <div class="ceremony__inf">
+            <div class="time">Time:  9:00 AM</div>
+            <div class="area">Area:  Bislol Area Zone,</div>
+            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+          </div></div>
+        <div class="ceremony__card ceremony__card--3">
+          <h3>Coktail Party</h3>
+          <div class="ceremony__inf">
+            <div class="time">Time:  9:00 AM</div>
+            <div class="area">Area:  Bislol Area Zone,</div>
+            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+          </div>
+        </div>
+        <div class="ceremony__card">
+          <h3>Friends Meetup</h3>
+          <div class="ceremony__inf">
+            <div class="time">Time:  9:00 AM</div>
+            <div class="area">Area:  Bislol Area Zone,</div>
+            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+          </div>
+        </div>
+        <div class="ceremony__card">
+          <h3>Reception</h3>
+          <div class="ceremony__inf">
+            <div class="time">Time:  9:00 AM</div>
+            <div class="area">Area:  Bislol Area Zone,</div>
+            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+          </div>
+        </div>
+        <div class="ceremony__card ceremony__card--6">
+          <h3>Coktail Party</h3>
+          <div class="ceremony__inf">
+            <div class="time">Time:  9:00 AM</div>
+            <div class="area">Area:  Bislol Area Zone,</div>
+            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+          </div>
+        </div>
         <div class="clearfix"></div>
         </div>
       </div>
