add registration form & footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header>
       <div class="container" id="nav_container">
         <nav class="nav">
           <a href="#" class="nav__link">About Us</a>
@@ -356,53 +356,110 @@
         <div class="ceremony__card">
           <h3>Friends Meetup</h3>
           <div class="ceremony__inf">
-            <div class="time">Time:  9:00 AM</div>
-            <div class="area">Area:  Bislol Area Zone,</div>
-            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+            <div class="time">Time: 9:00 AM</div>
+            <div class="area">Area: Bislol Area Zone,</div>
+            <div class="adress">
+              Address: Pitarson St, Jenopa Park Pinabar, Alata
+            </div>
           </div>
         </div>
         <div class="ceremony__card">
           <h3>Reception</h3>
           <div class="ceremony__inf">
-            <div class="time">Time:  9:00 AM</div>
-            <div class="area">Area:  Bislol Area Zone,</div>
-            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
-          </div></div>
+            <div class="time">Time: 9:00 AM</div>
+            <div class="area">Area: Bislol Area Zone,</div>
+            <div class="adress">
+              Address: Pitarson St, Jenopa Park Pinabar, Alata
+            </div>
+          </div>
+        </div>
         <div class="ceremony__card ceremony__card--3">
           <h3>Coktail Party</h3>
           <div class="ceremony__inf">
-            <div class="time">Time:  9:00 AM</div>
-            <div class="area">Area:  Bislol Area Zone,</div>
-            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+            <div class="time">Time: 9:00 AM</div>
+            <div class="area">Area: Bislol Area Zone,</div>
+            <div class="adress">
+              Address: Pitarson St, Jenopa Park Pinabar, Alata
+            </div>
           </div>
         </div>
         <div class="ceremony__card">
           <h3>Friends Meetup</h3>
           <div class="ceremony__inf">
-            <div class="time">Time:  9:00 AM</div>
-            <div class="area">Area:  Bislol Area Zone,</div>
-            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+            <div class="time">Time: 9:00 AM</div>
+            <div class="area">Area: Bislol Area Zone,</div>
+            <div class="adress">
+              Address: Pitarson St, Jenopa Park Pinabar, Alata
+            </div>
           </div>
         </div>
         <div class="ceremony__card">
           <h3>Reception</h3>
           <div class="ceremony__inf">
-            <div class="time">Time:  9:00 AM</div>
-            <div class="area">Area:  Bislol Area Zone,</div>
-            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+            <div class="time">Time: 9:00 AM</div>
+            <div class="area">Area: Bislol Area Zone,</div>
+            <div class="adress">
+              Address: Pitarson St, Jenopa Park Pinabar, Alata
+            </div>
           </div>
         </div>
         <div class="ceremony__card ceremony__card--6">
           <h3>Coktail Party</h3>
           <div class="ceremony__inf">
-            <div class="time">Time:  9:00 AM</div>
-            <div class="area">Area:  Bislol Area Zone,</div>
-            <div class="adress">Address:  Pitarson St, Jenopa Park Pinabar, Alata</div>
+            <div class="time">Time: 9:00 AM</div>
+            <div class="area">Area: Bislol Area Zone,</div>
+            <div class="adress">
+              Address: Pitarson St, Jenopa Park Pinabar, Alata
+            </div>
           </div>
         </div>
         <div class="clearfix"></div>
-        </div>
       </div>
     </div>
+    <div class="form">
+      <img class="deco5" src="images/deco5.png" alt=" " />
+      <img class="deco6" src="images/deco6.png" alt=" " />
+      <div class="invitation">
+        <div class="title">
+          <h2>Confirm your invitation</h2>
+          <p>
+            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <form action="#">
+          <input class="invitation__name" type="text" placeholder="Name" />
+          <input class="invitation__email" type="email" placeholder="Email" />
+          <input
+            class="invitation__gnumber"
+            type="text"
+            placeholder="Number of Guest"
+          />
+          <input
+            class="invitation__aevents"
+            type="text"
+            placeholder="Attending Events"
+          />
+          <input
+            class="invitation__message"
+            type="text"
+            placeholder="Message"
+          />
+          <input
+            class="invitation__submit"
+            type="submit"
+            value="I am Attending"
+          />
+        </form>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <div class="title">
+          <h2>Ana & David</h2>
+          <p>Copyright 2020 Farved | All Right Reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
