--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <header>
       <div class="container" id="nav_container">
         <nav class="nav">
-          <a href="#" class="nav__link">About Us</a>
-          <a href="#" class="nav__link">Story</a>
-          <a href="#" class="nav__link">Event</a>
-          <a href="#" class="nav__link">Ceremony</a>
-          <a href="#" class="nav__link">People</a>
-          <a href="#" class="nav__link">Gift</a>
-          <a href="#" class="nav__link">RSVP</a>
+          <a href="#about_link" class="nav__link">About Us</a>
+          <a href="#story_link" class="nav__link">Story</a>
+          <a href="#event_link" class="nav__link">Event</a>
+          <a href="#ceremony_link" class="nav__link">Ceremony</a>
+          <a href="#people_link" class="nav__link">People</a>
+          <a href="#gift__link" class="nav__link">Gift</a>
+          <a href="#RSVP_link" class="nav__link">RSVP</a>
           <div class="clearfix"></div>
         </nav>
       </div>
     </header>
     <main>
-      <div class="intro">
+      <div class="intro" id="event_link">
         <div class="info">
           <div class="info__top">
             <h1 class="info__title1">
@@ -75,7 +75,7 @@
           <a href="#"><i class="social__icon fab fa-youtube"></i></a>
         </div>
       </div>
-      <div class="about">
+      <div class="about" id="about_link">
         <img src="images/deco1.png" alt=" " />
         <div class="container">
           <div class="about__title title">
@@ -144,7 +144,7 @@
           <div class="clearfix"></div>
         </div>
       </div>
-      <div class="story">
+      <div class="story" id="story_link">
         <img class="deco2" src="images/deco2.png" alt=" " />
         <img class="deco3" src="images/deco3.png" alt=" " />
         <div class="container">
@@ -229,7 +229,7 @@
           </div>
         </div>
       </div>
-      <div class="people">
+      <div class="people" id="people_link">
         <div class="container">
           <div class="title">
             <h2>Our People</h2>
@@ -345,7 +345,7 @@
           </div>
         </div>
       </div>
-      <div class="ceremony">
+      <div class="ceremony" id="ceremony_link">
         <div class="container">
           <div class="title">
             <h2>Our Marriage Ceremony</h2>
@@ -417,7 +417,7 @@
           <div class="clearfix"></div>
         </div>
       </div>
-      <div class="form">
+      <div class="form" id="gift__link">
         <img class="deco5" src="images/deco5.png" alt=" " />
         <img class="deco6" src="images/deco6.png" alt=" " />
         <div class="invitation">
@@ -455,7 +455,7 @@
         </div>
       </div>
     </main>
-    <footer>
+    <footer id="RSVP_link">
       <div class="container">
         <div class="title">
           <h2>Ana & David</h2>
